Add project link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body>
     <h1>List of Finished frontendmentor.io Challenges</h1>
     <ol>
-      <li>Product Preview Card Component</li>
+      <li>
+        <a href="01-product-preview-card-component-main/index.html"
+          >Product Preview Card Component</a
+        >
+      </li>
     </ol>
   </body>
 </html>
